fix black box reveal on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -22,25 +22,25 @@
 
 @layer base {
 	mark {
-		@apply bg-current px-[1px] pb-0.5 font-extrabold text-stone-900 transition-colors duration-[1.25s] ease-in selection:bg-yellow-200 group-hover:bg-yellow-300;
+		@apply bg-current px-[1px] pb-0.5 font-extrabold text-stone-900 transition-colors duration-[1.25s] ease-in selection:bg-yellow-200 group-hover:bg-yellow-300 group-[.revealed]:bg-yellow-300;
 	}
 	mark[green] {
-		@apply selection:bg-lime-200 group-hover:bg-lime-300;
+		@apply selection:bg-lime-200 group-hover:bg-lime-300 group-[.revealed]:bg-lime-300;
 	}
 	mark[blue] {
-		@apply selection:bg-sky-200 group-hover:bg-sky-300;
+		@apply selection:bg-sky-200 group-hover:bg-sky-300 group-[.revealed]:bg-sky-300;
 	}
 	mark[orange] {
-		@apply selection:bg-orange-200 group-hover:bg-orange-300;
+		@apply selection:bg-orange-200 group-hover:bg-orange-300 group-[.revealed]:bg-orange-300;
 	}
 	mark[indigo] {
-		@apply selection:bg-indigo-200 group-hover:bg-indigo-300;
+		@apply selection:bg-indigo-200 group-hover:bg-indigo-300 group-[.revealed]:bg-indigo-300;
 	}
 	mark[red] {
-		@apply selection:bg-red-300 group-hover:bg-red-400;
+		@apply selection:bg-red-300 group-hover:bg-red-400 group-[.revealed]:bg-red-400;
 	}
-	mark[red] {
-		@apply selection:bg-violet-300 group-hover:bg-violet-400;
+	mark[violet] {
+		@apply selection:bg-violet-300 group-hover:bg-violet-400 group-[.revealed]:bg-violet-400;
 	}
 	p > mark {
 		@apply bg-yellow-400 font-extrabold;
@@ -89,35 +89,38 @@
 	spoiler {
 		@apply cursor-default select-none flex-col space-y-3 bg-stone-900 p-4 text-stone-900 shadow-lg transition-colors duration-[1.25s] ease-in hover:text-white;
 	}
+	spoiler.revealed {
+		@apply text-white;
+	}
 }
 
 @layer utilities {
 	.accept {
-		@apply group-hover:text-green-500/50;
+		@apply group-hover:text-green-500/50 group-[.revealed]:text-green-500/50;
 	}
 	p#prompt .accept {
 		@apply text-green-600;
 	}
 	.decline {
-		@apply group-hover:text-red-500/50;
+		@apply group-hover:text-red-500/50 group-[.revealed]:text-red-500/50;
 	}
 	p#prompt .decline {
 		@apply text-red-500;
 	}
 	.offset {
-		@apply group-hover:text-yellow-500/80;
+		@apply group-hover:text-yellow-500/80 group-[.revealed]:text-yellow-500/80;
 	}
 	p#prompt .offset {
 		@apply text-yellow-500;
 	}
 	.open {
-		@apply group-hover:text-sky-500/70;
+		@apply group-hover:text-sky-500/70 group-[.revealed]:text-sky-500/70;
 	}
 	p#prompt .open {
 		@apply text-sky-600;
 	}
 	.closed {
-		@apply group-hover:text-pink-500/70;
+		@apply group-hover:text-pink-500/70 group-[.revealed]:text-pink-500/70;
 	}
 	p#prompt .closed {
 		@apply text-pink-600;
